--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pixel Dot Art with Snake</title>
+  <title>Pixel Dot Art + Snake Audio Animation</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
   <script src="dot.js"></script>
-  <script src="snake.js"></script> 
+  <script src="snake.js"></script>
   <script src="sketch.js"></script>
 </head>
 <body>
