--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Snake</title>
+  <title>Creative Coding Major Project - Pixel Dot Art + Snake + Audio</title>
+
+  <!-- p5.js core library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+  <!-- p5.sound -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+
+  <!-- Your scripts -->
   <script src="dot.js"></script>
   <script src="snake.js"></script>
   <script src="sketch.js"></script>
+
 </head>
 <body>
 </body>
